# lotw-mcp

./: README.md  pyproject.toml  server.json
src/lotw_mcp/: __init__.py  adif_parser.py  client.py  server.py  user_activity.py
tests/: test_tools.py
